--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -50,8 +50,8 @@
                 <figure class="image is-hidden-mobile " style="height:800px" >
                     <%= image_tag @product.image1,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image1,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
             </div>               
             <% end %>
@@ -60,8 +60,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px" >
                     <%= image_tag @product.image2,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image2,style:"height:100%;width:auto"%>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image2,style:"height:auto;width:100%"%>
                 </figure>
             </div>                
             <% end %>
@@ -70,8 +70,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px">
                     <%= image_tag @product.image3,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image3,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image3,style:"height:auto;width:100%"%>
                 </figure>  
             </div>                
             <% end %>
@@ -80,8 +80,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px">
                     <%= image_tag @product.image4,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image4,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image4,style:"height:auto;width:100%" %>
                 </figure> 
             </div>                
             <% end %>
