--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -49,8 +49,8 @@
                 <figure class="image is-hidden-mobile " style="height:800px" >
                     <%= image_tag @product.image1,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image1,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image1,style:"height:auto;width:100%" %>
                 </figure> 
             </div>               
             <% end %>
@@ -59,8 +59,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px" >
                     <%= image_tag @product.image2,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image2,style:"height:100%;width:auto"%>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image2,style:"height:auto;width:100%"%>
                 </figure>
             </div>                
             <% end %>
@@ -69,8 +69,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px">
                     <%= image_tag @product.image3,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image3,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image3,style:"height:auto;width:100%" %>
                 </figure>  
             </div>                
             <% end %>
@@ -79,8 +79,8 @@
                 <figure class="image is-hidden-mobile" style="height:800px">
                     <%= image_tag @product.image4,style:"height:100%;width:auto" %>
                 </figure> 
-                <figure class="image is-hidden-desktop" style="height:800px">
-                    <%= image_tag @product.image4,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-desktop" >
+                    <%= image_tag @product.image4,style:"height:auto;width:100%"%>
                 </figure> 
             </div>                
             <% end %>
