--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -40,10 +40,14 @@
       <p class="title is-2 has-text-left ">
         一盒
       </p>
+      <p class="is-8 has-text-left is-hidden-desktop">
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
+      </p>      
       <br>
-      <p class="subtitle  is-6 has-text-left ">
+      <p class="subtitle  is-6 has-text-left is-hidden-mobile">
         一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
       </p>
+
     </div>
   </div>
   <div class="hero-foot">
