--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -57,7 +57,7 @@
         <li class="<%= 'is-active'if current_page?products_path %>">
           <%= link_to '新增商品', admin_newtype_path %>
         </li>
-        <li class="<%= 'is-active'if current_page?brand_path %>">
+          <li class="<%= 'is-active'if params[:action] == 'show'||params[:action] == 'index' %>">
           <%= link_to '商品列表',admin_commodities_path %>
         </li>
         <li class="<%= 'is-active'if current_page?designers_path %>">
