--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,8 @@ overflow:hidden;
 .image .is-3by2{
 height: 100%;};
 
+
+
   
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
@@ -51,5 +53,6 @@ $link-focus-border: $primary;
 @import "bulma/bulma";
 @import "products";
 @import "loading";
+@import "brand";
 
 
