--- a/app/views/admin/banners/index.html.erb
+++ b/app/views/admin/banners/index.html.erb
@@ -17,6 +17,10 @@
   <br>
   <br>
   
+  <div class="has-text-centered">
+  <%= link_to '更改首頁圖',edit_admin_banner_path(@banner) ,class:"button is-light"%>    
+  </div>
+
 	</div>
 </section>
 
