--- a/app/assets/stylesheets/brand.css
+++ b/app/assets/stylesheets/brand.css
@@ -1,3 +1,9 @@
 .mySlides {display:none}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
 .w3-badge {height:13px;width:13px;padding:0}
+
+@media screen and (max-width: 768px){
+
+	.w3-badge {height:6px;width:6px;padding:0}
+
+}
