--- a/app/views/new_order_mailer/new_order.html.erb
+++ b/app/views/new_order_mailer/new_order.html.erb
@@ -2,7 +2,8 @@
 <p>感謝您對一盒的喜愛與支持，以下是您本次在一盒所買的商品:</p>
 <p>訂單編號:<%= @order.id %></p>
 <% @order.ordered_items.each do |ordered_item|%>
-	<li><%= ordered_item.product.name %> <span><%= ordered_item.quantities %>個</span> ,<br> <span>單筆金額 <%= ordered_item.total %>元</span></li>
+	<li><%= ordered_item.product.name %> <span><%= ordered_item.quantities %>個</span> , <span>單筆金額 <%= ordered_item.total %>元</span></li>
 <% end %>
 <p >本次消費總金額共 <%= @order.total %> 元</p>
+<p>計件地址： <%= @order.address %></p>
 <p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
