--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -16,6 +16,49 @@
 		</div>
   <br>
   <br>
+  <div class="column has-text-left is-size-5 has-text-grey has-text-weight-bold" style="background-image: url(https://i.imgur.com/rFsUAA6.jpg);padding: 50px;">
+    <br>
+    <br>
+    <br>
+    <p>我們把心意裝載入盒</p>
+    <br>
+    <p>在一針一縫裡，放進了 <span>溫暖</span> 與<span>細語</span></p>
+    <br>
+    <p>在一敲一打中，寫下<span>時光</span> 和<span>屬於</span></p>
+    <br>
+    <p>都只為你...</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+
+    <br>
+    <br>
+    <br>
+
+  <div class="column has-text-centered is-size-5 has-text-white has-text-weight-bold" style="background-image: url(https://i.imgur.com/dww2xK1.jpg);padding: 50px;background-size: 100% auto">
+    <br>
+    <br>
+    <br>
+    <p>在相異的材質與人事物中尋找一種契合</p>
+    <br>
+    <p>透過每一分執著的縫製 </p>
+    <br>
+    <p>少了機器的冰冷，添了情感的永恆</p>
+    <br>
+    <p>簡單的線條說單純的故事...</p>
+    <br>
+    <p>讓Le'box成為我們滋養生活的方式</p>
+        <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
   
 	</div>
 </section>
