--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -57,7 +57,7 @@
     <div class="container">
       <ul>
         <li class="<%= 'is-active'if current_page?brand_path %>">
-          <%= link_to '品牌',brand_path %>
+          <%= link_to '關於一盒',brand_path %>
         </li>
         <li class="<%= 'is-active'if params[:action] == 'show'||params[:action] == 'index' %>">
 
