--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -22,9 +22,9 @@
     <br>
     <p>我們把心意裝載入盒</p>
     <br>
-    <p>在一針一縫裡，放進了 <span>溫暖</span> 與<span>細語</span></p>
+    <p>在一針一縫裡，放進 <span>溫暖</span> 與<span> 細語</span></p>
     <br>
-    <p>在一敲一打中，寫下<span>時光</span> 和<span>屬於</span></p>
+    <p>在一敲一打中，寫下<span>時光</span> 和<span> 屬於</span></p>
     <br>
     <p>都只為你...</p>
     <br>
@@ -43,13 +43,15 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
     <p>在相異的材質與人事物中尋找一種契合</p>
     <br>
     <p>透過每一分執著的縫製 </p>
     <br>
     <p>少了機器的冰冷，添了情感的永恆</p>
     <br>
-    <p>簡單的線條說單純的故事...</p>
+    <p>簡單的線條說單純的故事</p>
     <br>
     <p>讓Le'box成為我們滋養生活的方式</p>
         <br>
