--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,9 +46,9 @@ $colors: (
 );
 
 // Links
-$link: $primary;
-$link-invert: $primary-invert;
-$link-focus-border: $primary;
+$link: $grey;
+$link-invert: $dark-invert;
+$link-focus-border: $dark;
 
 @import "bulma/bulma";
 @import "products";
