--- a/app/views/products/contact.html.erb
+++ b/app/views/products/contact.html.erb
@@ -1,9 +1,48 @@
 
-<section class="section">
-	<div class="container">
 
-		  <div class="columns"> 
+	<div class="container"> 
+	   <br>
+	   <br>
+	   <br>
+	   <br> 
+		  <div class=" has-text-centered" >
+		  	<div class="title">Facbook:</div>
+		   <%= link_to("https://www.facebook.com/aboxwj") do%> 
+		  	<i class="fa fa-facebook-square fa-6 is-hidden-mobile" aria-hidden="true" style="font-size:20em"></i>
+		   <% end %>
+		   <%= link_to("https://www.facebook.com/aboxwj") do%> 
+		  	<i class="fa fa-facebook-square fa-6 is-hidden-desktop" aria-hidden="true" style="font-size:10em"></i>
+		   <% end %>
+	      </div>	
+	   <br>
+	   <br>
+	   <br>
+	   <br> 
+		  <div class=" has-text-centered" > 
+		  	<div class="title">Instagram:</div>
+		  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
+		  	<i class="fa fa-instagram is-hidden-mobile" aria-hidden="true" style="font-size:20em"></i>
+		  	<% end %>
+		  	<%= link_to("https://www.instagram.com/le_box_leather") do%> 
+		  	<i class="fa fa-instagram is-hidden-desktop" aria-hidden="true" style="font-size:10em"></i>
+		  	<% end %>
 	      </div>
+	   <br>
+	   <br>
+	   <br>
+ 	  
+		  <div class=" has-text-centered" > 
+		  	<div class="title">Email:</div>
+		  	<%= mail_to "lebox1995@gmail.com" do%>
+		  	<i class="fa fa-envelope fa-6 is-hidden-mobile " aria-hidden="true" style="font-size:18em"></i>
+		  	<% end %>
+		  	<%= mail_to "lebox1995@gmail.com" do%>
+		  	<i class="fa fa-envelope fa-6 is-hidden-desktop " aria-hidden="true" style="font-size:8em"></i>
+		  	<% end %>
+		  	<div class="is-size-4 has-text-weight-bold">lebox1995@gmail.com</div>
+	      </div>
+	   <br>
+	   <br>
+	   <br>	      
 
 	</div>
-</section>
