--- a/app/views/products/brand.html.erb
+++ b/app/views/products/brand.html.erb
@@ -13,7 +13,7 @@
 		    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
 		  </div>
 		</div>  
-  <div class="column has-text-left is-size-6 has-text-grey has-text-weight-bold is-hidden-desktop" >
+  <div class="column has-text-centered is-size-6 has-text-grey has-text-weight-bold is-hidden-desktop" >
     <br>
     <p>我們把心意裝載入盒</p>
     <br>
