新增使用者電話及名字 & 訂單的取或編號

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -15,7 +15,7 @@
         <div id="navbarMenuHeroB" class="navbar-menu">
           <% if current_user %>
           <div class="navbar-item">
-            <p>Welcome <%= current_user.email %></p>
+            <p>Welcome <%= current_user.name %></p>
           </div>
           <% end %>
           <div class="navbar-end">
@@ -43,11 +43,11 @@
         一盒
       </p>
       <p class="is-8 has-text-left is-hidden-desktop">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
       </p> 
       <br>
       <p class="subtitle  is-6 has-text-left is-hidden-mobile">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
       </p>
      
     </div>
