--- a/app/views/new_order_mailer/order_done.html.erb
+++ b/app/views/new_order_mailer/order_done.html.erb
@@ -6,4 +6,5 @@
 <% end %>
 <p >本次消費總金額共 <%= @order.total %> 元</p>
 <p>計件地址： <%= @order.address %></p>
-<p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
+<p>取貨編號:  <%= @order.deliver_number %></p>
+<p>謝謝您的光臨，希望本次一盒的手作能夠讓您的生活更有溫度！</p>
