--- a/app/views/products/order_index.html.erb
+++ b/app/views/products/order_index.html.erb
@@ -58,7 +58,9 @@
 
 	 <% end %>	
 	 <hr>
+	 <p class="help is-danger">本賣場運送方式採取7-11的交貨便/全家FamiPort，酌收運費$60元</p>
 	 <div class="column title has-text-right has-text-danger">
+	 	運費：60 元<br>
 	 	總金額：<%= @order.total %> 元
 	 </div>
 	<div class="columns">
