--- a/app/views/admin/details/index.html.erb
+++ b/app/views/admin/details/index.html.erb
@@ -13,7 +13,7 @@
 					<div class="column is-2">
 						<img src="https://bulma.io/images/placeholders/128x128.png">
 					</div>
-					<div class="column">
+					<div class="has-text-left column">
 						客戶帳號：
 						<div class="title  is-size-4  is-size-6-mobile">
 							<%= link_to admin_detail_path(user) do%>
