--- a/app/views/admin/details/show.html.erb
+++ b/app/views/admin/details/show.html.erb
@@ -2,17 +2,11 @@
 	<div class="container">	
 		<br>
 		<h1 class="title is-size-6-mobile has-text-centered  has-text-success" ><%= @user.email %> <br>的訂單紀錄</h1>
-		<br>
+		<p class="has-text-weight-bold">聯絡電話:<%= @user.number %></p>
 		<br>
 		<br>
 		<% @orders.order(id: :desc).each do |order| %>
-		<% if !order.cancel %>
-		<%= link_to '取消訂單',admin_detail_order_path(@user,order),method: :delete,data: {confirm:'要取消嘛？'},class:'button is-danger is-outlined' %>
-		<% else %>
-		<div class="button is-danger">
-			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 取消
-		</div>			
-		<% end %>
+
 
 		<div class="box">
 		<div class="columns">
@@ -69,6 +63,21 @@
 				</div>
 			</div>			
 		</div>
+		<hr>
+		<div class="column">
+		<% if !order.done and !order.cancel %>
+		  <%= link_to '輸入交貨號碼',edit_admin_detail_order_path(current_user,order) ,class:'button is-success  is-outlined '%>
+		  <%= link_to '取消訂單',admin_detail_order_path(@user,order),method: :delete,data: {confirm:'要取消嘛？'},class:'button is-danger is-outlined' %>	
+		<% elsif order.done and !order.cancel  %>
+		  	<div class="button is-success">
+			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 完成
+		    </div>
+		<% elsif !order.done and order.cancel%>
+			<div class="button is-danger">
+			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 取消
+		   </div>
+		<% end %>
+		</div>		
 		</div>
 		<% end %>			
 		</div>
