--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -41,11 +41,11 @@
         一盒
       </p>
       <p class="is-8 has-text-left is-hidden-desktop">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
       </p>      
       <br>
       <p class="subtitle  is-6 has-text-left is-hidden-mobile">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
       </p>
 
     </div>
