--- a/app/views/new_order_mailer/cancel_order.html.erb
+++ b/app/views/new_order_mailer/cancel_order.html.erb
@@ -1,4 +1,4 @@
-<div class="title">親愛的 <%= @user.email %> ,您好：</div>
+<div class="title">親愛的 <%= @user.name %> ,您好：</div>
 <p>感謝您對一盒的喜愛與支持，以下是您所取消的訂單內容:</p>
 <p>訂單編號:<%= @order.id %></p>
 <% @order.ordered_items.each do |ordered_item|%>
