--- a/app/views/new_order_mailer/order_done.html.erb
+++ b/app/views/new_order_mailer/order_done.html.erb
@@ -7,4 +7,5 @@
 <p >本次消費總金額共 <%= @order.total %> 元</p>
 <p>計件地址： <%= @order.address %></p>
 <p>取貨編號:  <%= @order.deliver_number %></p>
+<p>請於3日內將剩下的金額匯至此帳戶:</p>
 <p>謝謝您的光臨，希望本次一盒的手作能夠讓您的生活更有溫度！</p>
