--- a/app/views/products/detail.html.erb
+++ b/app/views/products/detail.html.erb
@@ -10,7 +10,11 @@
 		<% if order.cancel %>
 		<div class="button is-danger">
 			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 取消
-		</div>			
+		</div>
+		<% elsif order.done %>	
+		  	<div class="button is-success">
+			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 完成
+		    </div>				
 		<% end %>		
 		<div class="box">
 		<div class="columns">
