完成訂單調整

--- a/app/views/new_order_mailer/new_order.html.erb
+++ b/app/views/new_order_mailer/new_order.html.erb
@@ -7,3 +7,4 @@
 <p >本次消費總金額共 <%= @order.total %> 元</p>
 <p>計件地址： <%= @order.address %></p>
 <p>謝謝您的光臨，我們會儘快完成您的訂單，若要取消訂單請再寄信告知一盒</p>
+<p>請於3日內將一半的金額匯至此帳戶:</p>
