--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
 
-    <% if params[:controller] == 'admin/commodities' || params[:controller] == 'admin/designers'|| params[:controller] == 'admin/details'||params[:controller] == 'admin/banners'%>
+    <% if params[:controller].split("/").first == 'admin'%>
   	<%= render "admin_navbar" %>
     <% else %>
     <%= render "navbar"%>
