--- a/app/views/new_order_mailer/order_done.html.erb
+++ b/app/views/new_order_mailer/order_done.html.erb
@@ -4,7 +4,7 @@
 <% @order.ordered_items.each do |ordered_item|%>
 	<li><%= ordered_item.product.name %> <span><%= ordered_item.quantities %>個</span> , <span>單筆金額 <%= ordered_item.total %>元</span></li>
 <% end %>
-<p >本次消費總金額共 <%= @order.total %> 元</p>
+<p >本次消費總金額加上運費$60共 <%= @order.total %> 元</p>
 <p>計件地址： <%= @order.address %></p>
 <p>取貨編號:  <%= @order.deliver_number %></p>
 <p>請於3日內將剩下的金額匯至此帳戶:</p>
