修正歇業時還可以再商品端購買

--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -15,7 +15,7 @@
         <div id="navbarMenuHeroB" class="navbar-menu">
           <% if current_user %>
           <div class="navbar-item">
-            <p>Welcome 管理員:<%= current_user.email %></p>
+            <p>Welcome 管理員:<%= current_user.name %></p>
           </div>
           <% end %>
           <div class="navbar-end">
