商品新增側欄

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
-
+html{
+  font-family: 微軟正黑體;
+}
  @import "font-awesome-sprockets";
  @import "font-awesome";
  @import "bulma/sass/utilities/_all";
