--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -41,28 +41,17 @@
   </div>
 
   <div class="hero-body" style="padding: 0px">
-    <div class="slideshow-container">
-
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-    <%= image_tag @banner.banner1 , style:"width:100%" %>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <%= image_tag @banner.banner2 , style:"width:100%" %>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <%= image_tag @banner.banner3, style:"width:100%" %>
-    </div>
-    <div style="text-align:center">
-  <span class="dot w3-border"></span> 
-  <span class="dot w3-border"></span> 
-  <span class="dot w3-border"></span> 
-</div>
-
+    <div class="w3-content w3-display-container" style="max-width:none">
+      <%= image_tag @banner.banner1 ,class:'mySlides fade', style:"width:100%" %>
+      <%= image_tag @banner.banner2 ,class:'mySlides fade', style:"width:100%" %>
+      <%= image_tag @banner.banner3 ,class:'mySlides fade', style:"width:100%" %>
+      <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+        <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+        <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+        <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+        <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+        <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+      </div>
     </div>
   </div>
   <div class="hero-foot">
@@ -89,23 +78,30 @@
 </section>
 
 <script>
-var slideIndex = 0;
-showSlides();
+    var slideIndex = 1;
+    showDivs(slideIndex);
 
-function showSlides() {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    for (i = 0; i < slides.length; i++) {
-       slides[i].style.display = "none";  
+    function plusDivs(n) {
+      showDivs(slideIndex += n);
     }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}    
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
+
+    function currentDiv(n) {
+      showDivs(slideIndex = n);
     }
-    slides[slideIndex-1].style.display = "block";  
-    dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 5000); // Change image every 2 seconds
-}
+
+    function showDivs(n) {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("demo");
+      if (n > x.length) {slideIndex = 1}    
+      if (n < 1) {slideIndex = x.length}
+      for (i = 0; i < x.length; i++) {
+         x[i].style.display = "none";  
+      }
+      for (i = 0; i < dots.length; i++) {
+         dots[i].className = dots[i].className.replace(" w3-white", "");
+      }
+      x[slideIndex-1].style.display = "block";  
+      dots[slideIndex-1].className += " w3-white";
+    }
 </script>
