--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -42,9 +42,9 @@
 
   <div class="hero-body" style="padding: 0px">
     <div class="w3-content w3-display-container" style="max-width:none">
-      <%= image_tag @banner.banner1 ,class:'mySlides fade', style:"width:100%" %>
-      <%= image_tag @banner.banner2 ,class:'mySlides fade', style:"width:100%" %>
-      <%= image_tag @banner.banner3 ,class:'mySlides fade', style:"width:100%" %>
+      <%= image_tag brand.banner1 ,class:'mySlides fade', style:"width:100%" %>
+      <%= image_tag brand.banner2 ,class:'mySlides fade', style:"width:100%" %>
+      <%= image_tag brand.banner3 ,class:'mySlides fade', style:"width:100%" %>
       <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
         <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
         <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
